# learn

./: CMakeLists.txt  README.md
.ci/: Dockerfile
.circleci/: config.yml
catkin_ws/src/vis_lecture/: CMakeLists.txt  package.xml
catkin_ws/src/vis_lecture/launch/: original_car.launch  simple_car.launch
catkin_ws/src/vis_lecture/urdf/: simple_body1.urdf
catkin_ws/src/vis_lecture/xacro/: body.xacro  simple_body1.xacro  simple_car.xacro  tire.xacro
learn_kalmanfilter/: CMakeLists.txt  main.cpp
learn_kalmanfilter/src/: generateData.cpp  generateData.h  kalmanFilter.cpp  kalmanFilter.h  model.cpp  model.h
learn_kalmanfilter/tests/: testModel.cpp
learn_lm/: CMakeLists.txt  main.cpp
project/: CMakeLists.txt
project/g2o/: CMakeLists.txt  main.cpp
project/learn_calibration/: CMakeLists.txt  main.cpp
project/learn_calibration/calibration/: find_target.cpp  find_target.h  target_detector.cpp
project/learn_calibration/include/: target_detector.h
project/learn_calibration/python/: generate_test_data.py
project/learn_calibration/tests/: pose.txt
project/learn_kalmanfilter/src/: generateData.h  kalmanFilter.cpp
project/learn_lm/: main.cpp
project/learn_qt/: CMakeLists.txt  data.h  main.cpp  main.qml
project/ndtmatch/: CMakeLists.txt
